[package]
name = "sdvxio-pipe-program"
version.workspace = true
edition.workspace = true

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
sdvxio-pipe-proto.workspace = true
slotmap.workspace = true
thread-priority.workspace = true
printf-compat.workspace = true
log.workspace = true
env_logger.workspace = true
anstyle.workspace = true
chrono.workspace = true
panic-log.workspace = true

[build-dependencies]
bindgen.workspace = true
